--- a/001_cellSimulatorV1.1.csproj
+++ b/001_cellSimulatorV1.1.csproj
@@ -66,9 +66,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialPortOperation\PortProcess.cs" />
+    <Compile Include="SerialPortOperation\SerialPortConnection_e.cs" />
     <Compile Include="SerialPortOperation\SerialPortFileProcess.cs" />
     <Compile Include="Simulation\BatterySoxInf.cs" />
     <Compile Include="Simulation\CellSimulate.cs" />
+    <Compile Include="Simulation\ThredStatus.cs" />
     <EmbeddedResource Include="BatteryConfig.resx">
       <DependentUpon>BatteryConfig.cs</DependentUpon>
     </EmbeddedResource>
